--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -170,3 +170,11 @@
   border-top-right-radius: 25px !important;
   border-bottom-right-radius: 25px !important;
 }
+.linkColor {
+  color: black;
+}
+
+.linkColor:hover {
+  color: black;
+  text-decoration: none;
+}
